--- a/money/Views/Entries/Create.cshtml
+++ b/money/Views/Entries/Create.cshtml
@@ -19,12 +19,12 @@
             <select asp-for="Type" asp-items="Model.Types" class="form-control"></select>
         </div>
     }
-    <div class="row">
-        <div class="form-group col-sm-5">
+    <div class="form-row">
+        <div class="form-group col-5">
             <label asp-for="Amount">@(isCredit ? "Credit Amount" : "Amount")</label>
             <editor for="Amount" />
         </div>
-        <div class="form-group-nolabel col-sm-7">
+        <div class="form-group-nolabel col-7">
             @if (!isCredit)
             {
                 <div class="btn-group d-flex" role="group">
@@ -35,12 +35,12 @@
             }
         </div>
     </div>
-    <div class="row">
-        <div class="form-group col-sm-7">
+    <div class="form-row">
+        <div class="form-group col-7">
             <label asp-for="Date">Date</label>
             <editor for="Date" />
         </div>
-        <div class="form-group-nolabel col-sm-5">
+        <div class="form-group-nolabel col-5">
             <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
         </div>
     </div>
