--- a/money/Views/Entries/Update.cshtml
+++ b/money/Views/Entries/Update.cshtml
@@ -8,18 +8,18 @@
     <div class="col">
         <h1>Update Entry</h1>
         <form method="post">
-            <div class="row">
-                <div class="form-group col-sm-5">
+            <div class="form-row">
+                <div class="form-group col-5">
                     <label asp-for="Amount">Amount</label>
                     <editor for="Amount" />
                 </div>
             </div>
-            <div class="row">
-                <div class="form-group col-sm-7">
+            <div class="form-row">
+                <div class="form-group col-7">
                     <label asp-for="Date">Date</label>
                     <editor for="Date" />
                 </div>
-                <div class="form-group-nolabel col-sm-5">
+                <div class="form-group-nolabel col-5">
                     <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString(" yyyy-MM-dd")">Yesterday</button>
                 </div>
             </div>
