Progress spinners now work again

--- a/money/Views/Home/Index.cshtml
+++ b/money/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                 <!-- Content -->
             </div>
             <div class="modal-footer d-flex align-items-center">
-                <div class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></div>
+                <div class="spinner-border spinner-border-sm spinner-border-hidden" role="status" aria-hidden="true"></div>
                 <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
                 <button type="submit" class="btn btn-primary">Add</button>
             </div>
