--- a/money/Views/MonthlyBudgets/Index.cshtml
+++ b/money/Views/MonthlyBudgets/Index.cshtml
@@ -7,6 +7,7 @@
 <div class="row">
     <div class="col">
         <h1>Monthly Budgets</h1>
+        <h2>@Model.AccountName</h2>
         <table class="table table-sm table-striped">
             <thead>
                 <tr>
