Form submit buttons now have a margin to separate them from the last form input

--- a/money/Views/Accounts/Update.cshtml
+++ b/money/Views/Accounts/Update.cshtml
@@ -37,7 +37,7 @@
                 </label>
             </div>
             <input asp-for="ID" />
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary btn-submit">Update</button>
         </form>
     </div>
 </div>
