--- a/money/Views/Accounts/Create.cshtml
+++ b/money/Views/Accounts/Create.cshtml
@@ -31,7 +31,7 @@
                     <input asp-for="IncludeInNetWorth" /> Include balance in net worth
                 </label>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary btn-submit">Create</button>
         </form>
     </div>
 </div>
