--- a/money/Views/Categories/Create.cshtml
+++ b/money/Views/Categories/Create.cshtml
@@ -18,7 +18,7 @@
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary btn-submit">Create</button>
         </form>
     </div>
 </div>
