--- a/money/Views/Entries/Update.cshtml
+++ b/money/Views/Entries/Update.cshtml
@@ -35,7 +35,7 @@
                     <option value="">--</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary btn-submit">Update</button>
         </form>
     </div>
 </div>
