--- a/money/Views/MonthlyBudgets/Create.cshtml
+++ b/money/Views/MonthlyBudgets/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <editor for="Categories" />
             <input type="hidden" asp-for="AccountID" />
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary btn-submit">Create</button>
         </form>
     </div>
 </div>
