--- a/money/Views/Parties/Update.cshtml
+++ b/money/Views/Parties/Update.cshtml
@@ -12,7 +12,7 @@
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary btn-submit">Update</button>
         </form>
     </div>
 </div>
