--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -87,6 +87,9 @@ body {
 
 .dormant {
     background-color: #f3f9ff !important;
+
+.btn-submit, .btn-new {
+    margin-top: $vertical-gutter-double;
 }
 
 .delete-form {
