Create action buttons in lookup lists now have a separating margin

--- a/money/Views/Accounts/Index.cshtml
+++ b/money/Views/Accounts/Index.cshtml
@@ -38,6 +38,6 @@
                 </tbody>
             }
         </table>
-        <p><a asp-action="Create">New</a></p>
+        <p><a asp-action="Create" class="btn btn-primary btn-new">Add New Account</a></p>
     </div>
 </div>
