--- a/money/Views/MonthlyBudgets/Index.cshtml
+++ b/money/Views/MonthlyBudgets/Index.cshtml
@@ -29,6 +29,6 @@
                 }
             </tbody>
         </table>
-        <p><a asp-action="Create" asp-route-id="@Model.AccountID">New</a></p>
+        <p><a asp-action="Create" asp-route-id="@Model.AccountID" class="btn btn-primary btn-new">Create New Budget</a></p>
     </div>
 </div>
