--- a/money/Views/Categories/Index.cshtml
+++ b/money/Views/Categories/Index.cshtml
@@ -32,6 +32,6 @@
                 </tbody>
             }
         </table>
-        <p><a asp-action="Create">New</a></p>
+        <p><a asp-action="Create" class="btn btn-primary btn-new">Add New Category</a></p>
     </div>
 </div>
