--- a/money/Views/Parties/Index.cshtml
+++ b/money/Views/Parties/Index.cshtml
@@ -7,11 +7,11 @@
 <div class="row">
     <div class="col">
         <h1>Parties</h1>
-        <table class="table table-sm table-striped">
+        <table class="table table-striped">
             <thead class="thead-light">
                 <tr>
                     <th>Name</th>
-                    <th class="text-center">Edit</th>
+                    <th class="text-right"><span class="sr-only">Edit</span></th>
                 </tr>
             </thead>
             @foreach (var partyGroup in Model.Parties)
@@ -25,8 +25,8 @@
                     @foreach (var party in partyGroup)
                     {
                         <tr>
-                            <td>@party.Name</td>
-                            <td class="text-center"><a asp-action="Update" asp-route-id="@party.ID">Edit</a></td>
+                            <td class="align-middle">@party.Name</td>
+                            <td class="text-right"><a asp-action="Update" asp-route-id="@party.ID" class="btn btn-primary btn-sm">Edit</a></td>
                         </tr>
                     }
                 </tbody>
