Action buttons for dormant accounts now have reduced opacity

--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -205,6 +205,10 @@ body {
     background-color: #f3f9ff !important;
 }
 
+.dormant .btn-primary {
+    opacity: 0.6 !important;
+}
+
 .btn-submit, .btn-new {
     margin-top: 20px;
 }
