--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -101,6 +101,19 @@ body {
     padding-top: $vertical-gutter-double + $vertical-gutter;
 }
 
+.entry-edit {
+    padding-left: 10px;
+}
+
+.entry-edit, .entry-edit a {
+    color: #999;
+}
+
+.table-sm td, .table-sm th {
+    padding-left: .75rem;
+    padding-right: .75rem;
+}
+
 #net-worth h1 {
     font-size: 18px;
     font-weight: bold;
