--- a/money/Views/Categories/Update.cshtml
+++ b/money/Views/Categories/Update.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col">
         <h1>Update Category</h1>
-        <form method="post">
+        <form asp-controller="Categories" asp-action="Update" method="post">
             <div class="form-group">
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
@@ -19,7 +19,7 @@
 
 <div class="row">
     <div class="col">
-        <form asp-action="Delete" method="post" class="delete-form">
+        <form asp-controller="Categories" asp-action="Delete" method="post" class="delete-form">
             <input type="hidden" asp-for="ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
