--- a/money/Views/MonthlyBudgets/Update.cshtml
+++ b/money/Views/MonthlyBudgets/Update.cshtml
@@ -8,7 +8,7 @@
     <div class="col">
         <h1>Update Monthly Budget</h1>
         <h2>@Model.AccountName</h2>
-        <form method="post">
+        <form asp-controller="MonthlyBudgets" asp-action="Update" method="post">
             <div class="form-group">
                 <label asp-for="StartDate">Start budget on</label>
                 <editor for="StartDate" />
@@ -26,7 +26,7 @@
 
 <div class="row">
     <div class="col">
-        <form asp-action="Delete" method="post" class="delete-form">
+        <form asp-controller="MonthlyBudgets" asp-action="Delete" method="post" class="delete-form">
             <input type="hidden" asp-for="ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
