--- a/money/Views/Accounts/Create.cshtml
+++ b/money/Views/Accounts/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col">
         <h1>Create Account</h1>
-        <form method="post">
+        <form asp-controller="Accounts" asp-action="Create" method="post">
             <div class="form-group">
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
