--- a/money/Views/Users/Login.cshtml
+++ b/money/Views/Users/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col">
         <h1>Log In</h1>
-        <form method="post">
+        <form asp-controller="Users" asp-action="Login" method="post">
             <div class="form-group">
                 <label asp-for="Email">Email Address</label>
                 <input asp-for="Email" class="form-control"/>
