--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -193,10 +193,12 @@ body {
 }
 
 .progress-bar {
+    -webkit-transition: background-color 3s cubic-bezier(0.91, 0.065, 0.95, 0.54);
     transition: background-color 3s cubic-bezier(0.91, 0.065, 0.95, 0.54);
 }
 
 .updated {
+    -webkit-transition: background-color 0 cubic-bezier(0.91, 0.065, 0.95, 0.54);
     transition: background-color 0 cubic-bezier(0.91, 0.065, 0.95, 0.54);
     background-color: #ff6a00;
 }
@@ -260,6 +262,11 @@ body {
 
 .spinner-border-hidden {
     display: none;
+}
+
+.field-validation-error {
+    color: #cc0000;
+    font-size: 0.8rem;
 }
 
 @media (min-width: 600px) {
