--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -146,6 +146,11 @@ body {
     display: none;
 }
 
+.field-validation-error {
+    color: #cc0000;
+    font-size: 0.8rem;
+}
+
 @media (min-width: 600px) {
     .container {
         width: 600px;
