Hidden fields for delete forms no longer duplicate ID attributes

--- a/money/Views/Accounts/Update.cshtml
+++ b/money/Views/Accounts/Update.cshtml
@@ -50,7 +50,7 @@
 <div class="row">
     <div class="col">
         <form asp-controller="Accounts" asp-action="Delete" method="post" class="delete-form">
-            <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="ID" id="Delete_ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
     </div>
