--- a/money/Views/Parties/Update.cshtml
+++ b/money/Views/Parties/Update.cshtml
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="col">
         <form asp-controller="Parties" asp-action="Delete" method="post" class="delete-form">
-            <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="ID" id="Delete_ID" />
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
     </div>
