--- a/money/Views/Categories/Update.cshtml
+++ b/money/Views/Categories/Update.cshtml
@@ -11,6 +11,7 @@
             <div class="form-group">
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name"></span>
             </div>
             <button type="submit" class="btn btn-primary btn-submit">Update</button>
         </form>
