--- a/money/Views/Parties/Create.cshtml
+++ b/money/Views/Parties/Create.cshtml
@@ -13,10 +13,12 @@
                 <select asp-for="AccountID" asp-items="Model.Accounts" class="form-control">
                     <option value="">Please select...</option>
                 </select>
+                <span asp-validation-for="AccountID"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name"></span>
             </div>
             <button type="submit" class="btn btn-primary btn-submit">Create</button>
         </form>
