--- a/money/Views/Users/Login.cshtml
+++ b/money/Views/Users/Login.cshtml
@@ -10,11 +10,13 @@
         <form asp-controller="Users" asp-action="Login" method="post">
             <div class="form-group">
                 <label asp-for="Email">Email Address</label>
-                <input asp-for="Email" class="form-control"/>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password</label>
-                <input asp-for="Password" class="form-control"/>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password"></span>
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
         </form>
