--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -151,6 +151,12 @@ body {
     font-size: 0.8rem;
 }
 
+.last-4 {
+    color: #cecece;
+    font-size: 0.8rem;
+    margin-left: 8px;
+}
+
 @media (min-width: 600px) {
     .container {
         width: 600px;
