--- a/money/Views/Home/_NetWorth.cshtml
+++ b/money/Views/Home/_NetWorth.cshtml
@@ -1,5 +1,7 @@
 @model NetWorthViewModel
 
+@using Microsoft.AspNetCore.Html;
+
 @functions {
     string ClassForValue(decimal value)
     {
@@ -50,7 +52,7 @@
         {
             <div class="row">
                 <div class="col-8">
-                    <h2 class="net-worth-header">@group.Key</h2>
+                    <h2 class="net-worth-header">@group.Key.GetDisplayName()</h2>
                 </div>
                 <div class="col-4 text-right">
                     <h2 class="net-worth-header">@group.Sum(a => a.CurrentBalance)</h2>
