Category and party lists now allow adding directly to an account

--- a/money/Views/Categories/Index.cshtml
+++ b/money/Views/Categories/Index.cshtml
@@ -16,9 +16,12 @@
             </thead>
             @foreach (var accountGroup in Model.Categories)
             {
+                var (accountID, accountName) = accountGroup.Key;
+
                 <thead class="thead-dark">
                     <tr>
-                        <th colspan="2">@accountGroup.Key</th>
+                        <th class="align-middle">@accountName</th>
+                        <th class="text-right"><a asp-action="Create" asp-route-id="@accountID" class="btn btn-primary btn-sm">Add</a></th>
                     </tr>
                 </thead>
                 <tbody>
