Categories and Parties can now be deleted (closes #43)

--- a/money/Views/Categories/Index.cshtml
+++ b/money/Views/Categories/Index.cshtml
@@ -25,7 +25,7 @@
                     @foreach (var category in accountGroup)
                     {
                         <tr>
-                            <td class="align-middle">@category.Name</td>
+                            <td class="align-middle">@category.NameWithDeletedStatus()</td>
                             <td class="text-right"><a asp-action="Update" asp-route-id="@category.ID" class="btn btn-primary btn-sm">Edit</a></td>
                         </tr>
                     }
