Reworking of account number display UX

--- a/money/Views/Entries/Create.cshtml
+++ b/money/Views/Entries/Create.cshtml
@@ -17,6 +17,8 @@
         <div class="form-group">
             <label asp-for="Type">Transaction Type</label>
             <select asp-for="Type" asp-items="Model.Types" class="form-control"></select>
+
+            <span class="entry-modal-type-info"></span>
         </div>
     }
     <div class="form-row">
