--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -167,6 +167,10 @@ body {
     display: inline-block;
     padding-top: 4px;
     font-size: 0.8em;
+
+    > span {
+        margin-left: 5px;
+    }
 }
 
 @media (min-width: 600px) {
