--- a/money/Views/Categories/Index.cshtml
+++ b/money/Views/Categories/Index.cshtml
@@ -7,6 +7,7 @@
 <div class="row">
     <div class="col">
         <h1>Categories</h1>
+        <p><a asp-action="Index" asp-route-showDeleted="true">Show Deleted</a></p>
         <table class="table table-striped">
             <thead class="thead-light">
                 <tr>
