Entry form validation is now a bit cleaner
- Amount input is now automatically focused when entry modal opens (closes #55)
- Amount no longer defaults to 0, uses placeholder value
- Amount input no longer has input group prefix (displayed incorrectly in update form)
- Dates are now validated correctly
- Removed unused editor template

--- a/money/Views/Shared/EditorTemplates/Decimal.cshtml
+++ b/money/Views/Shared/EditorTemplates/Decimal.cshtml
@@ -1,10 +1,3 @@
 @model decimal?
 
-<div class="input-group">
-    <div class="input-group-prepend">
-        <div class="input-group-text">&pound;</div>
-    </div>
-    @Html.TextBox("", Model?.ToString("0.00"), new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off" })
-</div>
-
-@Html.ValidationMessage("")
+@Html.TextBox("", Model?.ToString("0.00"), new { @class = "form-control", type = "number", step = "0.01", autocomplete = "off", placeholder = "0.00" })
