--- a/money/Views/Entries/Create.cshtml
+++ b/money/Views/Entries/Create.cshtml
@@ -17,7 +17,6 @@
         <div class="form-group">
             <label asp-for="Type">Transaction Type</label>
             <select asp-for="Type" asp-items="Model.Types" class="form-control"></select>
-
             <span class="entry-modal-type-info"></span>
         </div>
     }
@@ -25,6 +24,7 @@
         <div class="form-group col-5">
             <label asp-for="Amount">@(isCredit ? "Credit Amount" : "Amount")</label>
             <editor for="Amount" />
+            <span asp-validation-for="Amount"></span>
         </div>
         <div class="form-group-nolabel col-7">
             @if (!isCredit)
@@ -41,6 +41,7 @@
         <div class="form-group col-7">
             <label asp-for="Date">Date</label>
             <editor for="Date" />
+            <span asp-validation-for="Date"></span>
         </div>
         <div class="form-group-nolabel col-5">
             <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
