--- a/money/Views/Entries/Update.cshtml
+++ b/money/Views/Entries/Update.cshtml
@@ -12,12 +12,14 @@
                 <div class="form-group col-5">
                     <label asp-for="Amount">Amount</label>
                     <editor for="Amount" />
+                    <span asp-validation-for="Amount"></span>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-7">
                     <label asp-for="Date">Date</label>
                     <editor for="Date" />
+                    <span asp-validation-for="Date"></span>
                 </div>
                 <div class="form-group-nolabel col-5">
                     <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString(" yyyy-MM-dd")">Yesterday</button>
