--- a/money/Views/Shared/_Layout.cshtml
+++ b/money/Views/Shared/_Layout.cshtml
@@ -64,8 +64,8 @@
         const NET_WORTH_URL = '@Url.Action("NetWorth", "Home")';
     </script>
 
-    <script src="~/js/dist/Money.js" asp-append-version="true"></script>
+    <script src="~/js/dist/money.js" asp-append-version="true"></script>
 
-    @RenderSection("Scripts", required: false)
+    @RenderSection("scripts", required: false)
 </body>
 </html>
